[gd_scene load_steps=12 format=3 uid="uid://bvujvu5kh15l6"]

[ext_resource type="Script" path="res://scripts/how_to_play.gd" id="1_gtglf"]
[ext_resource type="StyleBox" uid="uid://cnfujya23l8lb" path="res://themes/pausestyle.tres" id="2_s3i8g"]
[ext_resource type="FontFile" uid="uid://cxnq0tiy7l8ay" path="res://assets/fonts/Alien-Encounters-Bold-Italic.ttf" id="3_m18od"]
[ext_resource type="FontFile" uid="uid://bqkfa6mf2ckx8" path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" id="3_njmf8"]
[ext_resource type="Theme" uid="uid://b6epshmaiw5dd" path="res://themes/buttontheme.tres" id="4_6s3wg"]
[ext_resource type="Texture2D" uid="uid://bdij7rnorcosl" path="res://assets/voidcontrollerlayout.svg" id="4_xdwh2"]
[ext_resource type="FontFile" uid="uid://bl5csexcm7nrv" path="res://assets/fonts/Rocket Rinder.otf" id="5_mlu4u"]
[ext_resource type="PackedScene" uid="uid://bom567dqu14p4" path="res://scenes/ve_model.tscn" id="8_hagid"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1harn"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.14902, 0, 0.447059, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_bkhhv"]
viewport_path = NodePath("VEModel")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_dwu1n"]
color = Color(1, 1, 1, 1)
thickness = 2

[node name="HowToPlay" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_gtglf")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 15

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_s3i8g")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_m18od")
theme_override_font_sizes/font_size = 50
text = "How to play"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 3
theme_override_fonts/font = ExtResource("3_njmf8")
theme_override_font_sizes/font_size = 20
text = "Earth is under attack by the Voidling fleet, beings from the depths of black holes! Reverse engineering their technology, your ship is equipped with an \"Event Horizon Drive\" or EHD. As Earth's last hope, defeat foes and collect their Void Energy to power up the EHD. Arrive at the black hole with enough energy and you will be able to close it, stopping the Voidlings once and for all. However, take heed, regenerating your ships shields will cost you precious Void Energy."
autowrap_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1harn")

[node name="VETexture" type="TextureRect" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = SubResource("ViewportTexture_bkhhv")
expand_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_njmf8")
theme_override_font_sizes/font_size = 20
text = "This is Void Energy. Collect it!"

[node name="Panel" type="Panel" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxLine_dwu1n")

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ControllerLayout" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 3
theme_override_fonts/font = ExtResource("5_mlu4u")
theme_override_font_sizes/font_size = 20
text = "Controller Layout"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="KeyboardControlsTitle" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 3
theme_override_fonts/font = ExtResource("5_mlu4u")
theme_override_font_sizes/font_size = 20
text = "Keyboard Controls"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_njmf8")
text = "Move Ship:
Fire Weapon:
Warp Dodge:
Pause:
Toggle Map:
"

[node name="Label2" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_njmf8")
text = "WASD
LClick / Space / Ctrl
RClick / Shift
Tab
M"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="EndlessMode" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 3
theme_override_fonts/font = ExtResource("5_mlu4u")
theme_override_font_sizes/font_size = 20
text = "Endless MOde:"

[node name="Label2" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_njmf8")
text = "Collect as much Void Energy as you can while fighting against ever more frequent foes!"
autowrap_mode = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="AdditionalNotes" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 3
theme_override_fonts/font = ExtResource("5_mlu4u")
theme_override_font_sizes/font_size = 20
text = "Additional notes:"

[node name="Label3" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_njmf8")
text = "Warp Dodge has a short cooldown and no cost. Use it!"
autowrap_mode = 3

[node name="Voidcontrollerlayout" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(331, 507)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_xdwh2")

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 65)
offset_left = 918.0
offset_top = 545.0
offset_right = 1028.0
offset_bottom = 610.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme = ExtResource("4_6s3wg")

[node name="Label" type="Label" parent="BackButton"]
texture_filter = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "bACK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VEModel" parent="." instance=ExtResource("8_hagid")]

[connection signal="focus_entered" from="BackButton" to="." method="_on_back_button_focus_entered"]
[connection signal="mouse_entered" from="BackButton" to="." method="_on_back_button_mouse_entered"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]

[editable path="VEModel"]
[editable path="VEModel/VoidEnergy"]
